tests/errors/array_06.f90
program array_06
    implicit none

    character(4) :: str(3)
    str(1, 2)(:) = '1234'
end program array_06
